--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,9 @@
           },
           "defaultConfiguration": "production"
         },
-        "serve": {
+        "serve": { "options": {
+          "port": 4300,
+        },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
